--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Favicon with cache busting -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=2" />
+    <link rel="shortcut icon" href="/favicon.ico?v=2" />
+    <link rel="apple-touch-icon" href="/favicon.ico?v=2" />
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="/favicon.ico?v=2" />
+    <link rel="icon" type="image/x-icon" sizes="32x32" href="/favicon.ico?v=2" />
+    
     <title>BloomBuddy - AI-Powered Health Companion</title>
     <meta name="description" content="Get personalized health insights and risk analysis through our AI-powered platform. Analyze symptoms and medical reports with BloomBuddy." />
     <meta name="author" content="BloomBuddy" />
